build_err_2.txt
   Compiling zenith v0.1.0 (F:\proj_guides\zenith)
error[E0425]: cannot find value `rootfs` in this scope
   --> src\sandbox\mod.rs:317:21
    |
312 |     _rootfs: &Path, 
    |     ------- `_rootfs` defined here
...
317 |     let workspace = rootfs.join("workspace");
    |                     ^^^^^^
    |
help: the leading underscore in `_rootfs` marks it as unused, consider renaming it to `rootfs`
    |
312 -     _rootfs: &Path, 
312 +     rootfs: &Path, 
    |

warning: unused variable: `rootfs`
   --> src\sandbox\mod.rs:251:5
    |
251 |     rootfs: &Path,
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_rootfs`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `zenith` (bin "zenith") generated 1 warning
error: could not compile `zenith` (bin "zenith") due to 1 previous error; 1 warning emitted
